fix(theme): align link and badge styles

--- a/packages/core/src/theme/components/HoverGroup/index.scss
+++ b/packages/core/src/theme/components/HoverGroup/index.scss
@@ -69,7 +69,7 @@
     &__link {
       display: flex;
       align-items: center;
-      gap: 2px;
+      gap: 6px;
       // For click area
       height: 100%;
     }
