--- a/packages/core/src/theme/components/NavScreen/NavScreenMenuItem.scss
+++ b/packages/core/src/theme/components/NavScreen/NavScreenMenuItem.scss
@@ -22,6 +22,9 @@
   }
 
   &__left {
+    display: inline-flex;
+    align-items: center;
+    gap: 6px;
     font-size: 14px;
     font-weight: 500;
     line-height: 22px;
